Jan 19, 2021
  genes: removed code referencing UniGene IDs (UniGene IDs removed from RGD database)

Dec 4, 2020
  JBrowse tracks: added gene tracks for GRCm39 assembly

Nov 06, 2020
  genes: added export of GRCm39 assembly

Sep 18, 2020
  qtls: code refactor (1st step for parallelization)

Sep 16, 2020
  bonobo genes: added export for new reference assembly 'Mhudiblu_PPA_v0'

Sep 04, 2020
  agr: fixed export of CDS

Aug 28, 2020
  agr: added export of Ensembl data and additional attributes protein_id, transcript_id

Aug 21-25
  ensembl: added ensembl gff3 assemblies to be downloaded and then uploaded to Jbrowse

Jul 08, 2020
  agr genes: added export of genes with multiple loci

Apr 6, 2020
  genes: tuned up logging: debug messages no longer go to main summary; they go to detail log instead
  genes: fixed generation of unique ids

Mar 30, 2020
  agr genes: added handling of gene type 'biological-region'

Mar 09, 2020
  protein domains: improved logging of exceptions
  CreateGff4Eva and eva.sh were added for Eva variants

Feb 17, 2020
  protein domains: simplified gff3 generation and loading for all species

Feb 14, 2020
  agr: updated to latest 1.0.1.0 AGR spec

Feb 06, 2020
  gene files: code redone to process gene assemblies as specified in the app property file

Jan 31, 2020
  fasta preprocessor updated to preprocess scaffold reference sequence for 'naked mole rat'

Jan 24, 2020
  gene files: added generation of files for vervet (green monkey)

Jan 17, 2020
  added loading of promoter gff3 files into JBrowse

Jan 08, 2020
  generation of gff3 files for all promoters in RGD

Nov 26, 2019
  qtls: condensed summary emails into one

Nov 14, 2019
  agr: fixed code

Nov 11, 2019
  agr: fixed script

Nov 04, 2019
  protein domains: only generates gff3 file if there is any data for given assembly

Oct 30, 2019
  protein domains: extended to handle non-primary assemblies

Oct 28, 2019
  ontologies: fix NullPointerException for genes without names

Oct 25, 2019