@@ -20,13 +20,12 @@ repositories {
 }
 
 dependencies {
+    compile 'org.apache.commons:commons-collections4:4.4'
     compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'log4j:log4j:1.2.17'
     compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
-    compile 'org.springframework:spring-beans:5.3.0'
-    compile 'org.springframework:spring-jdbc:5.3.0'
-    compile 'org.apache.commons:commons-collections4:4.4'
-    compile 'org.apache.commons:commons-dbcp2:2.7.0'
+    compile 'org.springframework:spring-beans:5.3.1'
+    compile 'org.springframework:spring-jdbc:5.3.1'
     compile 'org.apache.httpcomponents:httpclient:4.5.12'
     compile 'commons-net:commons-net:3.6'
 
