@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Jan 19 2021 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Jan 28 2021 --" />
     </bean>
 
     <bean id="geneManager" class="edu.mcw.rgd.gff3.CreateGff4Gene">
@@ -11,6 +11,7 @@
                 <value>species:RAT    mapKey:60  toDir:data/Gene/Rat/   compress:yes</value>
                 <value>species:RAT    mapKey:70  toDir:data/Gene/Rat/   compress:yes</value>
                 <value>species:RAT    mapKey:360 toDir:data/Gene/Rat/   compress:yes</value>
+                <value>species:RAT    mapKey:372 toDir:data/Gene/Rat/   compress:yes</value>
                 <value>species:HUMAN  mapKey:13  toDir:data/Gene/Human/ compress:yes</value>
                 <value>species:HUMAN  mapKey:17  toDir:data/Gene/Human/ compress:yes</value>
                 <value>species:HUMAN  mapKey:38  toDir:data/Gene/Human/ compress:yes</value>
@@ -52,6 +53,7 @@
                 <value>species:RAT    mapKey:60  toDir:data/ProteinDomain/ compress:yes</value>
                 <value>species:RAT    mapKey:70  toDir:data/ProteinDomain/ compress:yes</value>
                 <value>species:RAT    mapKey:360 toDir:data/ProteinDomain/ compress:yes</value>
+                <value>species:RAT    mapKey:372 toDir:data/ProteinDomain/ compress:yes</value>
                 <value>species:HUMAN  mapKey:17  toDir:data/ProteinDomain/ compress:yes</value>
                 <value>species:HUMAN  mapKey:38  toDir:data/ProteinDomain/ compress:yes</value>
                 <value>species:MOUSE  mapKey:18  toDir:data/ProteinDomain/ compress:yes</value>
