@@ -1,3 +1,6 @@
+Jan 28, 2021
+  added NcbiPrep tool: to prepare NCBI fasta files for loading into JBrowse
+
 Jan 19, 2021
   genes: removed code referencing UniGene IDs (UniGene IDs removed from RGD database)
 
